header/footer mobile

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,142 @@
         max-width: 1280px;
     }
 }
+@media screen and (max-width: 1280px) {
+    .main_intro {
+        padding: 351px 40px 40px 40px!important;
+        margin-top: 95px;
+    }
+    .footer_column_2_mob{
+        display: block!important;
+    }
+    .footer_column_2 a{
+        font-size: 20px!important;
+        line-height: 24px!important;
+    }
+    .footer_menu_column div:first-child {
+        color: white!important;
+    }
+    .footer_menu_column{
+padding: 0 20px;
+    }
+    .footer_column div{
+        margin-right: 0!important;
+    }
+    .footer_menu_column div:first-child{
+        cursor: pointer;
+        padding-bottom: 16px;
+        margin-bottom: 0!important;
+        font-size: 14px;
+        line-height: 20px;
+    }
+    .footer_menu_column a{
+        color: #8A8A88;
+    }
+    .footer_line{
+width: 100%;
+height: 1px;
+background-color: #5B5B5A;
+margin-bottom: 16px;
+    }
 
+    .footer_column{
+flex-direction: column;
+    }
+
+    .footer_column_2 div{
+        display: none;
+    }
+
+    .footer_column_2 span {
+        display: none;
+    }
+
+.footer_column_2{
+    order: -1;
+}
+    footer .container {
+        flex-direction: column;
+        padding: 40px 0!important;
+    }
+
+.hamburger-menu{
+    display: block!important;
+    right: 4%;
+  }
+header .ul_desc_items {
+    display: none!important;
+}
+.header_contacts_container_none {
+    display: none!important;
+}
+.header_contacts_container{
+    align-items: start!important;
+    margin-top: 30px;
+}
+.header_contacts_container a {
+    margin-top: 4px;
+    font-size: 28px;
+    line-height: 28px;
+}
+.header_contacts_container a:hover{
+    color: #DBFF00!important;
+}
+header ul a {
+    color: white!important;
+}
+    }
+
+@media screen and (max-width: 1200px){
+    .main_intro_text {
+        padding-top: 16px!important;
+    }
+    .main_intro {
+        padding: 188px 20px 20px 20px!important;
+        flex-direction: column;
+    }
+    .main_intro_header {
+        font-size: 50px!important;
+        line-height: 50px!important;
+    }
+.hamburger-menu {
+    right: 5%;
+}
+}
+@media screen and (max-width: 991px){
+
+.hamburger-menu {
+    right: 6.6%;
+}
+}
+
+@media screen and (max-width: 766px){
+    .footer_column_2 button {
+        width: 100%;
+    }
+    header svg{
+        width: 99px;
+        height: 32px;
+    }
+    
+.hamburger-menu {
+    right: 8.6%;
+}
+}
+@media screen and (max-width: 575px){
+    .delaem_main_mob{
+        margin-bottom: 68px!important;
+    }
+    footer .container {
+        padding: 0 16px !important;
+    }
+    .main_intro {
+        margin-bottom: 20px!important;
+    }
+
+.hamburger-menu {
+    right: 46px;
+}
+}
 html body{
     background: #1E1E1E;
     color: white;
@@ -34,14 +169,16 @@ a:hover{
     text-decoration: none;
 }
 /* HEADER/FOOTER//////////////////////////////////////////////////////////// */
-
+.footer_menu_column a:first-child{
+color: #8A8A88;
+}
 header{
     display: flex;
     justify-content: space-between;
     padding: 24px 0;
     position: fixed;
     background-color: #1E1E1E;
-    z-index: 1;
+    z-index: 2;
 }
 
 header ul {
@@ -132,7 +269,8 @@ margin-top: 6px;
 footer{
     margin-top: 120px;
 }
-.footer_menu_column a:first-child{
+.footer_menu_column div:first-child{
+    margin-bottom: 24px;
     color: #8A8A88;
 }
 .footer_menu_column  a li{
@@ -282,19 +420,31 @@ footer{
 
 
 
-
-
 .container_main{
     margin-top: 7%;
 }
+.main_intro div {
+    z-index: 1;
+}
 .main_intro{
     background: #8A8A88;
-    background-image: url('../images/main_image.png');
+    /* background-image: url('../images/main_image.png'); */
     border-radius: 12px;
     padding: 488px 40px 40px 40px;
     margin-bottom: 120px;
     background-size: cover;
     background-repeat: repeat;
+    position: relative;
+}
+.main_img{
+    position: absolute;
+    border-radius: 12px;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    object-fit: cover;
+    background: radial-gradient(56.08% 56.08% at 50% 24.82%, rgba(0, 0, 0, 0) 67.44%, rgba(0, 0, 0, 0.6) 100%), url(image.png);
 }
 .main_intro button{
     margin-top: 24px;
@@ -496,5 +646,104 @@ color: black;
     line-height: 50px;
     letter-spacing: -0.025em;
     color: #DBFF00;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.hamburger-menu {
+    display: none;
+    position: absolute;
+}
+#menu__toggle {
+    opacity: 0;
+  }
+  
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+  z-index: -1;
+  }
+  
+  .menu__btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+  
+    width: 26px;
+    height: 26px;
+  
+    cursor: pointer;
+    z-index: 1;
+      position: absolute;
+      top: 0;
+  }
+  
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #FFFFFF;
+    transition-duration: .25s;
+    border-radius: 15px;
+    height: 2.8px;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  
+  .menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%; 
+    width: 100%;
+    height: 100vh; 
+    margin: 0;
+    padding: 132px 0;
+    list-style: none;
+    background-color: #1E1E1E;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2); 
+    transition-duration: .25s;
+  }
+  
+  .footer_menu_column svg{
+    transform: rotate(180deg);
+  }
+  .arrow_transform{
+    transform: rotate(0deg)!important
 }
   
